--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:paddingBottom="5dp"
+        android:background="@color/color_primary"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/name_input_layout"
+        android:paddingTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true">
@@ -22,28 +29,84 @@
             android:fadeScrollbars="false"
             android:gravity="left"
             android:hint="@string/edit_text_name"
-            android:inputType="textMultiLine"
+            android:inputType="textCapWords"
             android:scrollbarStyle="outsideInset"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"
+            android:singleLine="true"/>
     </android.support.design.widget.TextInputLayout>
-<LinearLayout
-    android:layout_weight="1"
-    android:layout_marginTop="10dp"
-    android:paddingTop="70dp"
-    android:paddingBottom="30dp"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/textView"
+
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.4"
-        android:text="@string/enter_age"/>
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_weight="0.5"
+        android:layout_marginTop="10dp"
+        android:paddingBottom="30dp"
+        android:paddingTop="10dp">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/date_input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="true">
+
+            <EditText
+                android:id="@+id/date_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fadeScrollbars="false"
+                android:focusable="false"
+                android:gravity="left"
+                android:hint="@string/edit_date"
+                android:imeOptions="actionDone"
+                android:scrollbarStyle="outsideInset"
+                android:scrollbars="vertical"/>
+
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingBottom="10dp"
+        android:paddingTop="20dp">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/enter_age"/>
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        android:paddingBottom="10dp"
+        android:paddingTop="70dp">
+
+        <Button
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/clear"/>
+
+        <Button
+            android:id="@+id/submit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/submit"/>
+    </LinearLayout>
+
 
 </LinearLayout>
